commented out controller in 'search' .state, to restore original functionality

--- a/views/about.html
+++ b/views/about.html
@@ -33,7 +33,9 @@
 				<label for="message">Please summarize your question or concern</label>
 				<textarea class="form-control" rows="5"></textarea>
 			</div>
-			<button type="button" class="btn btn-default" name="submit">Submit</button>
+			<div class="form-group btn-group">
+			<button type="button" class="btn-green" name="submit">Submit</button>
+			</div>
 		</form>
 	</div>
 </div>
