--- a/views/login.html
+++ b/views/login.html
@@ -14,7 +14,7 @@ Not currently functional-->
   		<a class="btn-green" ui-sref="#auth">Submit</a>
     	<p><strong>Not Yet a Member?</strong></p>
     	<!--Link to signup view/form-->
-  		<a ui-sref="signup" class="btn-green" >Sign Up</a>
+  		<a ui-sref="signup" class="btn-green" id="btn-signup">Sign Up</a>
 	</div>
 </form>
 
