--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -36,8 +36,7 @@ body label {
 	text-align: center;
 }
 #about {
-	font-family: "Arial Rounded Bold";
-	color: black;
+	color: #252525;
 }
 #about a {
 	text-decoration: none;
@@ -45,13 +44,9 @@ body label {
 	font-weight: bold;
 }
 .col-left {
-	background: rgba(242, 239, 219, .5);
 	border-radius: 4px;
 }
-.navbar {
-	background: none;
-	border: none;
-}
+
 nav ul {
 	padding-left: 0px;
 }
@@ -76,7 +71,6 @@ nav ul li {
 }
 #attribution {
 	text-align: center;
-	/*background: rgba(242, 239, 219, .5);*/
 }
 #attribution > ul {
 	padding: 0px;
@@ -97,7 +91,7 @@ form legend {
 #list-container h3, h4, h5 {
 	font-family: "Arial Rounded Bold", Arial;
 	text-decoration: none;
-	color: black;
+	color: #252525;
 }
 #searchform {
 	background: none;
@@ -113,6 +107,7 @@ form legend {
 	text-align: center;
 	display: inline-block;
 	cursor: pointer;
+	margin-top: 10px;
 	padding: 14px 10px 10px;
 	font-family: Couture;
 	font-size: 18px;
@@ -135,6 +130,9 @@ form legend {
 }
 #btn-fav .glyphicon{
 	color: #fc7647;
+}
+#btn-signup {
+	margin-top: 0px;
 }
 .recipe-title {
 	margin-top: 3px;
@@ -210,6 +208,7 @@ user-select: none;
 		font-size: 14px;
 	}
 	#list-container h4, #detail-result h4, #about h4 {
+		color: #252525;
 		font-size: 14px;
 	}
 	#list-container h3, #detail-result h3, #about h3 {
@@ -228,9 +227,7 @@ user-select: none;
 	#logo img {
 		width: 100%;
 	}
-	nav {
-		background-color: #e2d8c1;
-	}
+
 	.nav-right {
 		margin-top: -5px;
 	}
