--- a/views/details.html
+++ b/views/details.html
@@ -25,7 +25,7 @@
 			<li><h4>Total Time: {{details.totalTime}}</h4></li>
 			<li><h4>Makes {{details.yield}} servings</h4></li>
 			<li><h4><strong>Go To:</strong></h4></li>
-			<li><a id="btn-goto-source" class="btn-green" href="{{details.source.sourceRecipeUrl}}">{{details.source.sourceDisplayName}}</a></li>
+			<li><a id="btn-goto-source" class="btn-green" href="{{details.source.sourceRecipeUrl}}" target="_blank">{{details.source.sourceDisplayName}}</a></li>
 			<li><p>Note: this is an external link</p></li>
 			<li>
 	<!--Plan to have option of adding recipes to user profiles as favorites-->
