--- a/views/search.html
+++ b/views/search.html
@@ -6,22 +6,24 @@ This is the default view-->
 	<!--Views use 12-column grid layout via Bootstrap
 	In this case, form groups will span 1/3 of screen width on devices
 	wider than 767px, and the entire width on anything smaller-->
-		<div class="form-group col-xs-12 col-sm-4">
-			<label for="keyword" class="control-label">By Keyword</label>
-			<!--ng-models define what parameters are sent through API calls-->
-			<input class="input-lg" ng-model="keyword" type="text" id="keyword" placeholder="Add search term" />
-		</div>
-		<div class="form-group col-xs-12 col-sm-4">
-			<label for="include" class="control-label">That Include</label>
-			<input class="input-lg" ng-model="include" type="text" id="include" placeholder="Desired ingredients"/>
-		</div>
-		<div class="form-group col-xs-12 col-sm-4">
-			<label for="exclude" class="control-label">And Don't Include</label>
-			<input class="input-lg" ng-model="exclude" type="text" id="exclude" placeholder="Undesired ingredients"/>
-		</div>
-		<div class="form-group btn-group col-xs-12 col-sm-2 col-sm-offset-5">
-	<!--ui-sref acts similarly to href, but navigates states vs. routes/url's-->
-		<a ui-sref=".results" class="btn-green">Search</a>
+		<div class="row">
+			<div class="form-group col-xs-12 col-sm-4">
+				<label for="keyword" class="control-label">By Keyword</label>
+				<!--ng-models define what parameters are sent through API calls-->
+				<input class="input-lg" ng-model="keyword" type="text" id="keyword" placeholder="Add search term" />
+			</div>
+			<div class="form-group col-xs-12 col-sm-4">
+				<label for="include" class="control-label">That Include</label>
+				<input class="input-lg" ng-model="include" type="text" id="include" placeholder="Desired ingredients"/>
+			</div>
+			<div class="form-group col-xs-12 col-sm-4">
+				<label for="exclude" class="control-label">And Don't Include</label>
+				<input class="input-lg" ng-model="exclude" type="text" id="exclude" placeholder="Undesired ingredients"/>
+			</div>
+			<div class="form-group btn-group col-xs-12 col-sm-2 col-sm-offset-5">
+		<!--ui-sref acts similarly to href, but navigates states vs. routes/url's-->
+			<a ui-sref=".results" class="btn-green">Search</a>
+			</div>
 		</div>
 	</form>
 	
