--- a/views/search.results.html
+++ b/views/search.results.html
@@ -3,7 +3,7 @@
 <div id="list-container">
 	<table class="table result-table table-hover">
 		<tbody>        		
-		<tr ng-repeat="recipe in results"> 
+		<tr class="row" ng-repeat="recipe in results"> 
 			<td>	
 		<!--Anchors have dynamic url's based on id of recipe selected-->		
 				<a href="#/details/{{recipe.id}}">
@@ -18,7 +18,7 @@
 	            <h4>Rating: {{recipe.rating}}</h4>
 	            <h5>By: {{recipe.sourceDisplayName}}</h5>
 	            </a>
-		    </div>
+		    </td>
 		</tr>
 		</tbody>
 	</table>
