--- a/views/details.html
+++ b/views/details.html
@@ -38,7 +38,7 @@
 	<!--This ul displays Yummly attribution with logo wrapped in anchor to recipe on their site-->
 	<div id="attribution" class="form-group col-xs-6 col-sm-4">
 		<ul>
-			<li>{{details.attribution.text}}</li> 
+			<li><p>{{details.attribution.text}}</p></li> 
 			<li><a href="{{details.attribution.url}}"><img ng-src="{{details.attribution.logo}}" alt="Yummly logo" /></a></li>
 		</ul>
 	</div>
