added createProfile() and ui-sref

--- a/views/profile.html
+++ b/views/profile.html
@@ -1,6 +1,6 @@
 <div id="profile">
-<form ng-repeat="info in profile">
-	<legend><h2>Welcome, {{info.uname}}</h2></legend>
+<form ng-model="profile">
+	<legend><h2>Welcome, {{info.fname}}</h2></legend>
 <!--divs span width of container on devices <768px
 	broken up into thirds if screen >=768px-->
 <!--	<div class="form-group col-xs-12 col-sm-8 col-sm-offset-2">
