--- a/views/signup.html
+++ b/views/signup.html
@@ -30,6 +30,6 @@ Not currently functional-->
 			<input type="checkbox"> Please email me updates about EatIn 
 			</label>
 		</div>
-		<a href="" class="btn-green">Submit</a>
+		<a ui-sref="profile" ng-click="createProfile()" class="btn-green">Submit</a>
 	</div>
 </form>
