--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -25,8 +25,9 @@ body label {
 	list-style: none;
 }
 .container h1, h2, form > legend {
-	font-family: Couture;
+	font-family: Couture, "Helvetica Neue", Helvetica, Geneva, sans-serif;
 	color: #5fad87;
+	text-transform: uppercase;
 }
 .ui-view h2 {
 	margin-top: 10px;
@@ -116,11 +117,12 @@ form legend {
 }
 .btn-green {
 	text-align: center;
+	text-transform: uppercase;
 	display: inline-block;
 	cursor: pointer;
 	margin-top: 10px;
 	padding: 14px 10px 10px;
-	font-family: Couture;
+	font-family: Couture, "Helvetica Neue", Helvetica, Geneva, sans-serif;
 	font-size: 18px;
 	color: white;
 	background-color: #5fad87;
@@ -216,8 +218,9 @@ user-select: none;
 		padding-right: 0px;
 	}
 	.container h1, h2, form > legend {
+		text-transform: uppercase;
 		font-size: 18px;
-		font-family: Couture;
+		font-family: Couture, "Helvetica Neue", Helvetica, Geneva, sans-serif;
 		color: #5fad87;
 	}
 	nav .glyphicon {
