--- a/views/details.html
+++ b/views/details.html
@@ -30,7 +30,7 @@
 			<li>
 	<!--Plan to have option of adding recipes to user profiles as favorites-->
 				<button id="btn-fav"type="button" class="btn btn-default">
-					<span class="glyphicon glyphicon-star"></span> Favorite
+					<span class="glyphicon glyphicon-star"></span> <b>Favorite</b>
 				</button></span>
 			</li>
 		</ul>
