couple form changes

--- a/views/about.html
+++ b/views/about.html
@@ -23,16 +23,17 @@
 			<h4>Need help?  Need to report an issue?</h4>
 			<div class="form-group">
 				<label for="name">Your Name</label>
-				<input type="text" name="name" value="" />
+				<input type="text" name="name" value=""/>
 			</div>
 			<div class="form-group">
-				<label for="email">Your Email</label>
-				<input type="email" name="" value="" />
+				<label for="email">Your Email*</label>
+				<input type="email" name="email" value=""/>
 			</div>
 			<div class="form-group">
-				<label for="message">Please summarize your question or concern</label>
+				<label for="message">Your Message*</label>
 				<textarea class="form-control" rows="5"></textarea>
 			</div>
+			<p><i>*Required</i></p>
 			<div class="form-group btn-group">
 			<button type="button" class="btn-green" name="submit">Submit</button>
 			</div>
