--- a/views/search.html
+++ b/views/search.html
@@ -1,7 +1,7 @@
 <!--Search Form
 This is the default view-->
 <div id="searchform">
-	<form>
+	<form ng-submit='run'>
 		<legend><h2>Search Recipes</h2></legend>
 	<!--Views use 12-column grid layout via Bootstrap
 	In this case, form groups will span 1/3 of screen width on devices
@@ -21,12 +21,10 @@ This is the default view-->
 				<input class="input-lg" ng-model="exclude" type="text" id="exclude" placeholder="Undesired ingredients"/>
 			</div>
 			<div class="form-group btn-group col-xs-12 col-sm-2 col-sm-offset-5">
-		<!--ui-sref acts similarly to href, but navigates states vs. routes/url's-->
-			<a ui-sref=".results" class="btn-green">Search</a>
+			<input type="submit" class="btn-green" value="Search"/>
 			</div>
 		</div>
 	</form>
-	
 </div>
 <!--This div is a nested view for results, allowed by UI-Router plugin-->
 <div ui-view></div>
